<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5D6A7"
    android:orientation="vertical"
    tools:context=".codelabs.core.notification.NotificationFragment">


    <Button
        android:id="@+id/notification_Simples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="50dp"
        android:focusable="true"
        android:padding="20dp"
        android:text="@string/btn_criar_notificacaoo"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/notification_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:elevation="50dp"
        android:focusable="true"
        android:layout_gravity="center"
        android:text="@string/btn_cancelar_notificacaoo"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/notification_atualizar"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_atualizar_notificacao"
        android:layout_marginTop="100dp" />
</LinearLayout>