<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jorge.app_google_certification_codelabs.codelabs.mainfragment.MainFragment"
        android:label="@string/title_Codelabs"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_navigation_home_to_toastSnackFragment"
            app:destination="@id/toastSnackFragment" />
        <action
            android:id="@+id/action_navigation_home_to_notificationFragment"
            app:destination="@id/notificationFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.jorge.app_google_certification_codelabs.codelabs.sobre.SobreFragment"
        android:label="@string/title_sobre"
        tools:layout="@layout/fragment_sobre" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.jorge.app_google_certification_codelabs.codelabs.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/toastSnackFragment"
        android:name="com.jorge.app_google_certification_codelabs.codelabs.core.toastandsnack.ToastSnackFragment"
        android:label="fragment_toast_snack"
        tools:layout="@layout/fragment_toast_snack" />
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.jorge.app_google_certification_codelabs.codelabs.core.notification.NotificationFragment"
        android:label="fragment_notification"
        tools:layout="@layout/fragment_notification" />
</navigation>